<resources>
    <string name="app_name">Smart Feeding</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_all_field_required">Fill all fields</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="device_setted">"Your device has been configured"</string>
    <string name="device_not_setted">"Set up your device</string>
    <string name="feed_pet">Feed</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_devices">Devices</string>
    <string name="title_feeder">Feeder</string>
    <string name="title_settings">Settings</string>

    <string name="name_pet">Name</string>
    <string name="weight_pet">Weight</string>
    <string name="genre">Genre</string>
    <string name="breed">Breed</string>
    <string name="birth_date">Birth date</string>
    <string name="amount">Amount (g)</string>
    <string name="period">Period (days)</string>
    <string name="feeding_per_day">Meal per day</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="feed_your_pet">Feed your pet</string>

    <string name="reset_preferences">Reset Preferences</string>
</resources>
